@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-Lujoyglamour
-version:            0.0.5.1.9.1.9
+version:            0.0.6.1.9
 abstract:           Create short URLs with luxury and glamour
 author:
     - JJ Merelo <jj@merelo.net>
